--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,7 +11,7 @@ target 'Beitool' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
-
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
   target 'BeitoolTests' do
     inherit! :complete
     # Pods for testing
@@ -28,3 +28,4 @@ target 'Beitool' do
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
