--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^1.0.4",
     "@react-native-seoul/kakao-login": "^3.4.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -18,7 +19,8 @@
     "react-native": "0.67.4",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-safe-area-context": "^4.2.2",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-native-webview": "^11.18.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
