--- a/ios/Beitool/Info.plist
+++ b/ios/Beitool/Info.plist
@@ -71,5 +71,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Program requires GPS to track cars and job orders</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+  	<string>Program requires GPS to track cars and job orders</string>
+  	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  	<string>Program requires GPS to track cars and job orders</string>
 </dict>
 </plist>
