--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-native-seoul/kakao-login": "^3.4.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "core-js": "^3.21.1",
+    "haversine-distance": "^1.2.1",
     "native-base": "^3.3.7",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-calendars": "^1.1282.0",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-maps": "^0.30.1",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-svg": "^12.3.0",
     "react-native-webview": "^11.18.0"
