--- a/ios/Beitool/Info.plist
+++ b/ios/Beitool/Info.plist
@@ -72,10 +72,31 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Program requires GPS to track cars and job orders</string>
+	<string>기능 사용을 위해 현재 사용자의 위치를 불러옵니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-  	<string>Program requires GPS to track cars and job orders</string>
+  	<string>기능 사용을 위해 현재 사용자의 위치를 불러옵니다.</string>
   	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-  	<string>Program requires GPS to track cars and job orders</string>
+  	<string>기능 사용을 위해 현재 사용자의 위치를 불러옵니다.</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+  	<false/>
+ 	 <key>UIAppFonts</key>
+  	<array>
+    <string>AntDesign.ttf</string>
+    <string>Entypo.ttf</string>
+    <string>EvilIcons.ttf</string>
+    <string>Feather.ttf</string>
+    <string>FontAwesome.ttf</string>
+    <string>FontAwesome5_Brands.ttf</string>
+    <string>FontAwesome5_Regular.ttf</string>
+    <string>FontAwesome5_Solid.ttf</string>
+    <string>Foundation.ttf</string>
+    <string>Ionicons.ttf</string>
+    <string>MaterialCommunityIcons.ttf</string>
+    <string>MaterialIcons.ttf</string>
+    <string>Octicons.ttf</string>
+    <string>SimpleLineIcons.ttf</string>
+    <string>Zocial.ttf</string>
+    <string>Fontisto.ttf</string>
+  </array>
 </dict>
 </plist>
