--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-maps": "^0.30.1",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.18.0"
   },
   "devDependencies": {
