--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actbase/react-daum-postcode": "^1.0.4",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-seoul/kakao-login": "^3.4.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -23,7 +24,9 @@
     "react-native-calendars": "^1.1282.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-image-picker": "^4.8.3",
     "react-native-maps": "^0.30.1",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
