--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@actbase/react-daum-postcode": "^1.0.4",
+    "@react-aria/ssr": "^3.1.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-seoul/kakao-login": "^3.4.3",
@@ -24,7 +25,7 @@
     "react-native-calendars": "^1.1282.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.3.2",
-    "react-native-image-picker": "^4.8.3",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-maps": "^0.30.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-safe-area-context": "^4.2.2",
